---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
   ┌─ tests/inputs/loop_invariant/asserts_in_loop_missing.fail.move:16:9
   │
16 │         assert!(i < 100);
   │         ^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/loop_invariant/asserts_in_loop_missing.fail.move:22: bounded_loop_no_asserts_spec
